[gd_scene load_steps=3 format=3 uid="uid://c5mos0a234w8p"]

[ext_resource type="Theme" uid="uid://41ggext22ekn" path="res://Graphics/Themes/primaryTheme.tres" id="1_2cofh"]
[ext_resource type="Script" path="res://Scenes/Overlays/GMOptions/EventOptions.gd" id="1_f7awu"]

[node name="EventOptions" type="Panel"]
script = ExtResource("1_f7awu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 656.0
color = Color(0, 0, 0, 0.478431)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 103.0
offset_top = 231.0
offset_right = 1029.0
offset_bottom = 421.0
theme_override_constants/separation = 20

[node name="BtnEvent1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
tooltip_text = "Aloha 1"
theme = ExtResource("1_2cofh")
text = "a"

[node name="BtnEvent2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
tooltip_text = "Aloha 2"
theme = ExtResource("1_2cofh")
text = "a"

[node name="BtnEvent3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
tooltip_text = "Aloha 3"
theme = ExtResource("1_2cofh")
text = "a"

[node name="Title" type="Label" parent="."]
offset_top = 103.0
offset_right = 1152.0
offset_bottom = 166.0
theme = ExtResource("1_2cofh")
text = "Event Options?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/BtnEvent1" to="." method="_on_btn_event_1_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnEvent2" to="." method="_on_btn_event_2_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnEvent3" to="." method="_on_btn_event_3_pressed"]
